--- a/overlay.html
+++ b/overlay.html
@@ -7,11 +7,12 @@
     html, body {
       width: 100%;
       height: 100%;
-      background: rgba(220, 220, 230, 0.12);
+      background: rgba(220, 220, 230, 0.1);
       font-family: system-ui, -apple-system, sans-serif;
       display: flex;
       align-items: center;
       justify-content: center;
+      -webkit-app-region: drag;
     }
     .box {
       color: #fff;
